2012-02-06  6.7.5-3 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.5-3, SVN revision 6732.

2012-02-06  6.7.5-3 Cristy  <quetzlzacatenango@image...>
  * TIFF no longer writes the incorrect fill order.

2012-02-05  6.7.5-2 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.5-2, SVN revision 6718.

2012-02-03  6.7.5-2 Cristy  <quetzlzacatenango@image...>
  * Add SyncImagePixelCache() to ensure cache morphology is consistent.
  * Patch so two -colorspace options return correct results for rowund-trip.

2012-02-02  6.7.5-1 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.5-1, SVN revision 6684.

2012-01-30  6.7.5-1 Cristy  <quetzlzacatenango@image...>
  * Support the -alpha remove option (use it to remove transparency from PDF,
    convert -density 200 apple.pdf -alpha remove x:).
  * Use union instead of casting gzFile and BZFILE.
  * Don't treat PSD user channel as alpha (patch from Dominic Benson).
  * Prevent overflow when casting short int to size_t when parsing a
    maliciously crafted image with an IFD whose all IOP tags' value offsets
    point to the beginning of the IFD itself [CVE-2012-0247].
  * Prevent DES when parsing a maliciously crafted image with an IFD whose
    all IOP tags' value offsets point to the beginning of the IFD itself
    [CVE-2012-0248].
  * Caption with Pango support no longer return a blank canvas.
  * Correct sRGB colorspace conversion equations.

2012-01-30  6.7.5-1 Glenn Randers-Pehrson <glennrp@image...>
  * Fix bug in png coder (spurious warning, reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=1&t=20257).

2012-01-28  6.7.5-0 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.5-0, SVN revision 6606.

2012-01-25  6.7.5-0 Cristy  <quetzlzacatenango@image...>
  * Zlib-1.2.5.2 requires gzFile cast (bug report from John Bowler).

2012-01-25  6.7.4-10 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.4-10, SVN revision 6592.
